--- a/assets/stylesheets/layout/_page-head.scss
+++ b/assets/stylesheets/layout/_page-head.scss
@@ -36,10 +36,10 @@
 
 //IMAGE OPTION ***************
 
-.page-head.img-bg{background-size: cover;background-position: center center; position:relative;}
+.page-head.img-bg{background-size: cover;background-position: center center; position:relative; margin-bottom:40px;}
 	.page-head.img-bg .page-head-overlay{background-color:rgba($black, .5); position:absolute; height:100%; width:100%; top:0; bottom:0; left:0; right:0;}
 
-  .page-head.img-bg h1{font-weight: 600;color: $white;margin: 60px 0 0;font-size: 36px;}
+  .page-head.img-bg h1{font-weight: 600;color: $white;margin: 30px 0;font-size: 36px;}
     .page-head.img-bg h1 span{display: block;text-transform: uppercase;font-size: 60%;letter-spacing: .1em;font-weight: 400;}
     
 /* breadcrumbs */
